# pocketscan

./: README.txt
pocketscan.src/: AboutDialog.cpp  AboutDialog.h  AutoClip.cpp  AutoClip.h  CMakeLists.txt  DynamicSlot.cpp  DynamicSlot.h  FileNameSeries.cpp  FileNameSeries.h  ImageAddButton.cpp  ImageAddButton.h  ImageAlg.cpp  ImageAlg.h  ImageFileCache.cpp  ImageFileCache.h  LevelEditor.cpp  LevelEditor.h  Main.cpp  MainWindow.cpp  MainWindow.h  MathUtil.h  Project.cpp  Project.h  TabBar.cpp  TabBar.h  TileView.cpp  TileView.h  WizardBar.cpp  WizardBar.h
pocketscan.src/icons/: app.rc  icons.qrc
